Huy dơn hàng hoan chỉnh

--- a/WebLapTop/WebLapTop/Views/Home/CheckOut.cshtml
+++ b/WebLapTop/WebLapTop/Views/Home/CheckOut.cshtml
@@ -33,16 +33,16 @@
                             <h4 class="title" style="font-weight:initial">Địa chỉ thanh toán của:<strong style="color:black"> @Context.Session.GetString("_HoVaTen").ToString()</strong></h4>
                         </div>
                         <div class="form-group">
-                            <input class="input" type="text" name="HoVaTen" placeholder="First Name" value="@Context.Session.GetString("_HoVaTen")">
+                            <input class="input" type="text" name="cusname" placeholder="First Name" value="@Context.Session.GetString("_HoVaTen")">
                         </div>
 
 
                         <div class="form-group">
-                            <input class="input" type="text" name="NoiNhan" placeholder="Địa chỉ">
+                            <input class="input" type="text" name="cusadd" placeholder="Địa chỉ">
                         </div>
 
                         <div class="form-group">
-                            <input class="input" type="tel" name="SoDienThoai" placeholder="Số điện thoại">
+                            <input class="input" type="tel" name="cusphone" placeholder="Số điện thoại">
                         </div>
 
                     </div>
