--- a/WebLapTop/WebLapTop/Views/SanPham/Details.cshtml
+++ b/WebLapTop/WebLapTop/Views/SanPham/Details.cshtml
@@ -8,7 +8,8 @@
 <div class="section">
     <!-- container -->
     <div class="container">
-        <!-- row -->@if (Model.GiaKhuyenMai > 0)
+        <!-- row -->
+        @if (Model.GiaKhuyenMai > 0)
         {
             <div class="row">
                 <!-- Product main img -->
