--- a/WebLapTop/WebLapTop/Views/BanPhim/Index.cshtml
+++ b/WebLapTop/WebLapTop/Views/BanPhim/Index.cshtml
@@ -70,26 +70,26 @@
                 <!-- /aside Widget -->
                 <!-- aside Widget -->
                 <div class="aside">
-                    <h3 class="aside-title">Lọc theo giá bán</h3>
+                    <h3 class="aside-title">Lọc theo giá bán phụ kiện</h3>
                     <div class="price-filter">
                         <div id="price-slider"></div>
-                        <a asp-controller="" asp-action="Index" style="font-weight:bold">Khoảng 7 - 10 triệu</a>
+                        <a asp-controller="Gia100_200" asp-action="Index" style="font-weight:bold">Khoảng 100 - 200 trăm</a>
                     </div>
                     <div class="price-filter">
                         <div id="price-slider"></div>
-                        <a asp-controller="Gia11_15" asp-action="Index" style="font-weight:bold">Khoảng 11 - 15 triệu</a>
+                        <a asp-controller="Gia200_300" asp-action="Index" style="font-weight:bold">Khoảng 200 - 300 trăm</a>
                     </div>
                     <div class="price-filter">
                         <div id="price-slider"></div>
-                        <a asp-controller="Gia16_20" asp-action="Index" style="font-weight:bold">Khoảng 16 - 20 triệu</a>
+                        <a asp-controller="Gia300_500" asp-action="Index" style="font-weight:bold">Khoảng 300 - 500 trăm</a>
                     </div>
                     <div class="price-filter">
                         <div id="price-slider"></div>
-                        <a asp-controller="" asp-action="" style="font-weight:bold">Khoảng 22 - 25 triệu</a>
+                        <a asp-controller="Gia500_800" asp-action="Index" style="font-weight:bold">Khoảng 500 - 800 trăm</a>
                     </div>
                     <div class="price-filter">
                         <div id="price-slider"></div>
-                        <a asp-controller="" asp-action="" style="font-weight:bold">Trên 25 triệu</a>
+                        <a asp-controller="Tren800" asp-action="Index" style="font-weight:bold">Trên 800 trăm</a>
                     </div>
                 </div>
                 <!-- /aside Widget -->
