--- a/WebLapTop/WebLapTop/Views/LapTop/Index.cshtml
+++ b/WebLapTop/WebLapTop/Views/LapTop/Index.cshtml
@@ -70,10 +70,10 @@
                 <!-- /aside Widget -->
                 <!-- aside Widget -->
                 <div class="aside">
-                    <h3 class="aside-title">Lọc theo giá bán</h3>
+                    <h6 class="aside-title">Lọc theo giá bán laptop</h6>
                     <div class="price-filter">
                         <div id="price-slider"></div>
-                        <a asp-controller="" asp-action="Index" style="font-weight:bold">Khoảng 7 - 10 triệu</a>
+                        <a asp-controller="Gia7_11" asp-action="Index" style="font-weight:bold">Khoảng 7 - 11 triệu</a>
                     </div>
                     <div class="price-filter">
                         <div id="price-slider"></div>
@@ -172,7 +172,7 @@
                 <!-- store products -->
                 <div class="row">
                     <!-- product -->
-                    @foreach (var item in Model.Where(x=>x.IdloaiPhuKien== null))
+                    @foreach (var item in Model.Where(x => x.IdloaiPhuKien == null))
                     {
                         @if (item.GiaKhuyenMai > 0)
                         {
@@ -241,6 +241,8 @@
                         }
                     }
                 </div>
+
+                
                 <!-- /store products -->
                 <!-- store bottom filter -->
                 <div class="store-filter clearfix">
@@ -277,7 +279,7 @@
                             for (i = from; i <= to; i++)
                             {
                                 var parms = new Dictionary<string, string>
-                                                                                                                                                                                                                                                                                        {
+                                                                                                                                                                                                                                                                                                        {
                         { "page",i.ToString()}
                     };
                                 if (pageCurrent == i)
