--- a/WebLapTop/WebLapTop/Views/Shared/_Layout.cshtml
+++ b/WebLapTop/WebLapTop/Views/Shared/_Layout.cshtml
@@ -73,185 +73,200 @@
     @if (Context.Session.GetString("_Id") == null)
     {
         <!-- HEADER -->
-        <header>
-            <!-- TOP HEADER -->
-            <div id="top-header">
-                <div class="container">
-                    <ul class="header-links pull-left">
-                        <li><a href="#" style="color:black; font-weight:bold;font-size:15px"><i class="fa fa-phone"></i> 0919.348.968</a></li>
-                        <li><a href="#" style="color: black; font-weight: bold; font-size: 15px"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
-                        <li><a href="https://www.google.com/maps/contrib/114749658482643527028/place/ChIJpynKyMFyCjER9NM5-liXBjY/10.3949111,105.4296278,17.81z/data=!4m6!1m5!8m4!1e2!2s114749658482643527028!3m1!1e1" style="color: black; font-weight: bold; font-size: 15px"><i class="fa fa-map-marker"></i> Quản Cơ Thành, p. Bình Khánh, Thành phố Long Xuyên, An Giang, Việt Nam</a></li>
-                    </ul>
-                    <ul class="header-links pull-right">
-                        <li><a asp-controller="Home" asp-action="Login" style="color: black; font-weight: bold; font-size: 15px"><i class="fa fa-user-o"></i> Đăng nhập</a></li>
-                    </ul>
-                </div>
+        <!-- TOP HEADER -->
+        <div id="top-header">
+            <div class="container">
+                <ul class="header-links pull-left">
+                    <li><a href="#" style="color:black; font-weight:bold;font-size:15px"><i class="fa fa-phone"></i> 0919.348.968</a></li>
+                    <li><a href="#" style="color: black; font-weight: bold; font-size: 15px"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
+                    <li><a href="https://www.google.com/maps/contrib/114749658482643527028/place/ChIJpynKyMFyCjER9NM5-liXBjY/10.3949111,105.4296278,17.81z/data=!4m6!1m5!8m4!1e2!2s114749658482643527028!3m1!1e1" style="color: black; font-weight: bold; font-size: 15px"><i class="fa fa-map-marker"></i> Quản Cơ Thành, p. Bình Khánh, Thành phố Long Xuyên, An Giang, Việt Nam</a></li>
+                </ul>
+                <ul class="header-links pull-right">
+                    <li><a asp-controller="Home" asp-action="Login" style="color: black; font-weight: bold; font-size: 15px"><i class="fa fa-user-o"></i> Đăng nhập</a></li>
+                </ul>
             </div>
-            <!-- /TOP HEADER -->
-            <!-- MAIN HEADER -->
-            <div id="header">
-                <!-- container -->
-                <div class="container">
-                    <!-- row -->
-                    <div class="row">
-                        <!-- LOGO -->
-                        <div class="col-md-3">
-                            <div class="header-logo" style="margin-top: -14px;">
-                                <a asp-controller="Home" asp-action="Index" class="logo">
-                                    <img src="~/as/img/logo.png" style="width: 430px; margin-bottom: -62px;" alt="">
+        </div>
+        <!-- /TOP HEADER -->
+        <!-- MAIN HEADER -->
+        <div id="header">
+            <!-- container -->
+            <div class="container">
+                <!-- row -->
+                <div class="row">
+                    <!-- LOGO -->
+                    <div class="col-md-3">
+                        <div class="header-logo" style="margin-top: -14px;">
+                            <a asp-controller="Home" asp-action="Index" class="logo">
+                                <img src="~/as/img/logo.png" style="width: 430px; margin-bottom: -62px;" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <!-- /LOGO -->
+                    <!-- SEARCH BAR -->
+                    <div class="col-md-6">
+                        <div class="header-search">
+                            <form>
+                                @*<select class="input-select">
+                                        <option value="0">All Categories</option>
+                                        <option value="1">Category 01</option>
+                                        <option value="1">Category 02</option>
+                                    </select>*@
+                                <input class="input" placeholder="Search here" style="margin-left: 160px;">
+                                <button class="search-btn">Search</button>
+                            </form>
+                        </div>
+                    </div>
+                    <!-- /SEARCH BAR -->
+                    <!-- ACCOUNT -->
+                    <div class="col-md-3 clearfix">
+                        <div class="header-ctn">
+                            <!-- Wishlist -->
+                            <div>
+                                <a href="#" style="color:black;font-weight:bold">
+                                    <i class="fa fa-heart-o"></i>
+                                    <span>Your Wishlist</span>
+                                    <div class="qty">2</div>
                                 </a>
                             </div>
-                        </div>
-                        <!-- /LOGO -->
-                        <!-- SEARCH BAR -->
-                        <div class="col-md-6">
-                            <div class="header-search">
-                                <form>
-                                    @*<select class="input-select">
-                                            <option value="0">All Categories</option>
-                                            <option value="1">Category 01</option>
-                                            <option value="1">Category 02</option>
-                                        </select>*@
-                                    <input class="input" placeholder="Search here" style="margin-left: 160px;">
-                                    <button class="search-btn">Search</button>
-                                </form>
+                            <!-- /Wishlist -->
+                            <!-- Cart -->
+                            <div class="header-icons">
+                                <a style="color:black; font-weight:bold" asp-controller="Home" asp-action="Cart">
+                                    <i class="fa fa-shopping-cart"></i>
+                                    <span>Giỏ hàng</span>
+                                    <div class="qty"></div>
+                                </a>
                             </div>
-                        </div>
-                        <!-- /SEARCH BAR -->
-                        <!-- ACCOUNT -->
-                        <div class="col-md-3 clearfix">
-                            <div class="header-ctn">
-                                <!-- Wishlist -->
-                                <div>
-                                    <a href="#" style="color:black;font-weight:bold">
-                                        <i class="fa fa-heart-o"></i>
-                                        <span>Your Wishlist</span>
-                                        <div class="qty">2</div>
-                                    </a>
-                                </div>
-                                <!-- /Wishlist -->
-                                <!-- Cart -->
-                                <div class="header-icons">
-                                    <a style="color:black; font-weight:bold" asp-controller="Home" asp-action="Cart">
-                                        <i class="fa fa-shopping-cart"></i>
-                                        <span>Giỏ hàng</span>
-                                        <div class="qty"></div>
-                                    </a>
-                                </div>
-                                <!-- /Cart -->
-                                <!-- Menu Toogle -->
-                                <div class="menu-toggle">
-                                    <a href="#">
-                                        <i class="fa fa-bars"></i>
-                                        <span>Menu</span>
-                                    </a>
-                                </div>
-                                <!-- /Menu Toogle -->
+                            <!-- /Cart -->
+                            <!-- Menu Toogle -->
+                            <div class="menu-toggle">
+                                <a href="#">
+                                    <i class="fa fa-bars"></i>
+                                    <span>Menu</span>
+                                </a>
                             </div>
+                            <!-- /Menu Toogle -->
                         </div>
-                        <!-- /ACCOUNT -->
                     </div>
-                    <!-- row -->
+                    <!-- /ACCOUNT -->
                 </div>
-                <!-- container -->
+                <!-- row -->
             </div>
-            <!-- /MAIN HEADER -->
-        </header>
+            <!-- container -->
+        </div>
+        <!-- /MAIN HEADER -->
         <!-- /HEADER -->
     }
     else
     {
         <!-- HEADER -->
-        <header>
-            <!-- TOP HEADER -->
-            <div id="top-header">
-                <div class="container">
-                    <ul class="header-links pull-left">
-                        <li><a href="#" style="color:black; font-weight:bold;font-size:15px"><i class="fa fa-phone"></i> 0919.348.968</a></li>
-                        <li><a href="#" style="color: black; font-weight: bold; font-size: 15px"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
-                        <li><a href="https://www.google.com/maps/contrib/114749658482643527028/place/ChIJpynKyMFyCjER9NM5-liXBjY/10.3949111,105.4296278,17.81z/data=!4m6!1m5!8m4!1e2!2s114749658482643527028!3m1!1e1" style="color: black; font-weight: bold; font-size: 15px"><i class="fa fa-map-marker"></i> Quản Cơ Thành, p. Bình Khánh, Thành phố Long Xuyên, An Giang, Việt Nam</a></li>
-                    </ul>
-                    <ul class="header-links pull-right">
-                        <div class="dropdown">
-                            <h4>@Context.Session.GetString("_HoVaTen").ToString()</h4>
-                            <div class="dropdown-content">
-                                <a asp-controller="Home" asp-action="DonHangCuaToi">Đơn hàng</a>
-                                <a asp-controller="Home" asp-action="ChangePassword">Đổi mật khẩu</a>
-                                <a asp-controller="Home" asp-action="Logout">Đăng xuất</a>
-                            </div>
+        <!-- TOP HEADER -->
+        <div id="top-header">
+            <div class="container">
+                <ul class="header-links pull-left">
+                    <li><a href="#" style="color:black; font-weight:bold;font-size:15px"><i class="fa fa-phone"></i> 0919.348.968</a></li>
+                    <li><a href="#" style="color: black; font-weight: bold; font-size: 15px"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
+                    <li><a href="https://www.google.com/maps/contrib/114749658482643527028/place/ChIJpynKyMFyCjER9NM5-liXBjY/10.3949111,105.4296278,17.81z/data=!4m6!1m5!8m4!1e2!2s114749658482643527028!3m1!1e1" style="color: black; font-weight: bold; font-size: 15px"><i class="fa fa-map-marker"></i> Quản Cơ Thành, p. Bình Khánh, Thành phố Long Xuyên, An Giang, Việt Nam</a></li>
+                </ul>
+                <ul class="header-links pull-right">
+                    <li class="dropdown">
+                        <h4>@Context.Session.GetString("_HoVaTen").ToString()</h4>
+                        <div class="dropdown-content">
+                            <a asp-controller="Home" asp-action="DonHangCuaToi">Đơn hàng</a>
+                            <a asp-controller="Home" asp-action="ChangePassword">Đổi mật khẩu</a>
+                            <a asp-controller="Home" asp-action="Logout">Đăng xuất</a>
                         </div>
-                    </ul>
-                </div>
+
+                    </li>
+
+                </ul>
             </div>
-            <!-- /TOP HEADER -->
-            <!-- MAIN HEADER -->
-            <div id="header">
-                <!-- container -->
-                <div class="container">
-                    <!-- row -->
-                    <div class="row">
-                        <!-- LOGO -->
-                        <div class="col-md-3">
-                            <div class="header-logo" style="margin-top: -14px;">
-                                <a asp-controller="Home" asp-action="Index" class="logo">
-                                    <img src="~/as/img/logo.png" style="width: 430px; margin-bottom: -62px;" alt="">
+        </div>
+        <!-- /TOP HEADER -->
+        <!-- MAIN HEADER -->
+        <div id="header">
+            <!-- container -->
+            <div class="container">
+                <!-- row -->
+                <div class="row">
+                    <!-- LOGO -->
+                    <div class="col-md-3">
+                        <div class="header-logo" style="margin-top: -14px;">
+                            <a asp-controller="Home" asp-action="Index" class="logo">
+                                <img src="~/as/img/logo.png" style="width: 430px; margin-bottom: -62px;" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <!-- /LOGO -->
+                    <!-- SEARCH BAR -->
+                    <div class="col-md-6">
+                        <div class="header-search">
+                            <form>
+                                @*<select class="input-select">
+                                        <option value="0">All Categories</option>
+                                        <option value="1">Category 01</option>
+                                        <option value="1">Category 02</option>
+                                    </select>*@
+                                <input class="input" placeholder="Search here" style="margin-left: 160px;">
+                                <button class="search-btn">Search</button>
+                            </form>
+                        </div>
+                    </div>
+                    <!-- /SEARCH BAR -->
+                    <!-- ACCOUNT -->
+
+                    <div class="col-md-3 clearfix" style="width: 188px;">
+                        <div class="header-ctn">
+
+                            <!-- /Cart -->
+                            <!-- Menu Toogle -->
+                            <div class="menu-toggle">
+                                <a href="#">
+                                    <i class="fa fa-bars"></i>
+                                    <span>Menu</span>
                                 </a>
                             </div>
+                            <!-- /Menu Toogle -->
                         </div>
-                        <!-- /LOGO -->
-                        <!-- SEARCH BAR -->
-                        <div class="col-md-6">
-                            <div class="header-search">
-                                <form>
-                                    @*<select class="input-select">
-                                            <option value="0">All Categories</option>
-                                            <option value="1">Category 01</option>
-                                            <option value="1">Category 02</option>
-                                        </select>*@
-                                    <input class="input" placeholder="Search here" style="margin-left: 160px;">
-                                    <button class="search-btn">Search</button>
-                                </form>
-                            </div>
-                        </div>
-                        <!-- /SEARCH BAR -->
-                        <!-- ACCOUNT -->
-                        <div class="col-md-3 clearfix" style="width: 188px;">
-                            <div class="header-ctn">
-                                <div>
-                                    <a href="#" style="color:black;font-weight:bold">
-                                        <i class="fa fa-heart-o"></i>
-                                        <span>Your Wishlist</span>
-                                        <div class="qty">2</div>
-                                    </a>
-                                </div>
-                                <div class="dropdown">
-                                    <a style="color:black; font-weight:bold" asp-controller="Home" asp-action="Cart">
-                                        <i class="fa fa-shopping-cart"></i>
-                                        <span>Giỏ hàng</span>
-                                        <div class="qty"></div>
-                                    </a>
-                                </div>
-                                <!-- /Cart -->
-                                <!-- Menu Toogle -->
-                                <div class="menu-toggle">
-                                    <a href="#">
-                                        <i class="fa fa-bars"></i>
-                                        <span>Menu</span>
-                                    </a>
-                                </div>
-                                <!-- /Menu Toogle -->
-                            </div>
-                        </div>
-                        <!-- /ACCOUNT -->
                     </div>
-                    <!-- row -->
+                    <!-- /ACCOUNT -->
                 </div>
-                <!-- container -->
+                <!-- row -->
             </div>
-            <!-- /MAIN HEADER -->
-        </header>
-        <!-- /HEADER -->
+            <!-- container -->
+        </div>
+
+        <div class="dropdown">
+            <a style="color:black; font-weight:bold" asp-controller="Home" asp-action="Cart">
+                <i class="fa fa-shopping-cart" style=" margin-left: 1238px;"></i>
+                <span>Giỏ hàng</span>
+                <div class="qty"></div>
+            </a>
+        </div>
+
+        <!-- /MAIN HEADER -->
+        var jsoncartlove = Context.Request.Cookies[$"{Context.Session.GetInt32("_Id")}_cartlove"];
+        if (!string.IsNullOrEmpty(jsoncartlove))
+        {
+            var cartlove = JsonConvert.DeserializeObject<List<CartLove>>(jsoncartlove);
+            <div class="nav-item">
+                <a asp-area="" asp-controller="Home" asp-action="ProductLove" class="nav-link">
+                    <span class="fa fa-heart-o" style="margin-left:1410px"></span>(@cartlove.Count)
+
+                </a>
+            </div>
+        }
+        else
+        {
+            <div class="nav-item cta cta-colored">
+                <a asp-area="" asp-controller="Home" asp-action="ProductLove" class="nav-link">
+                    <span class="fa fa-heart-o"></span>
+                </a>
+            </div>
+
+        }
     }
+
     <!-- NAVIGATION -->
     <nav id="navigation">
         <!-- container -->
