--- a/WebLapTop/WebLapTop/Areas/Admin/Views/Nhanvien/Index.cshtml
+++ b/WebLapTop/WebLapTop/Areas/Admin/Views/Nhanvien/Index.cshtml
@@ -39,7 +39,8 @@
                         @Html.DisplayFor(modelItem => item.Email)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.AnhDaiDien)
+                        <img src="~/anhNV/@Html.DisplayFor(modelItem=>item.AnhDaiDien)" width="70" height="70" class="img-thumbnail" />
+                      
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.TenDangNhap)
