--- a/WebLapTop/WebLapTop/Views/SanPham/Details.cshtml
+++ b/WebLapTop/WebLapTop/Views/SanPham/Details.cshtml
@@ -653,7 +653,7 @@
 
             <div class="col-md-12">
                 <div class="section-title text-center">
-                    <h3 class="title">Related Products</h3>
+                    <h3 class="title">Sản phẩm liên quan</h3>
                 </div>
             </div>
             @{ var jsoncartlove = Context.Request.Cookies[$"{Context.Session.GetInt32("_Id")}_cartlove"];
