--- a/WebLapTop/WebLapTop/Areas/Admin/Views/Nhanvien/Create.cshtml
+++ b/WebLapTop/WebLapTop/Areas/Admin/Views/Nhanvien/Create.cshtml
@@ -20,7 +20,7 @@
         </div>
         <div class="card-content">
             <div class="card-body">
-                <form asp-action="Create">
+                <form asp-action="Create"enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="col-md-3">
                         <label>Họ và tên</label>
@@ -44,7 +44,7 @@
                         <label>Ảnh đại diện</label>
                     </div>
                     <div class="col-md-8 form-group">
-                        <input asp-for="AnhDaiDien" class="form-control" placeholder="Ảnh đại diện" />
+                        <input type="file" name="file" class="form-control" placeholder="Ảnh đại diện" />
                     </div>
                     <div class="col-md-3">
                         <label>Tên đăng nhập</label>
