--- a/WebLapTop/WebLapTop/Areas/Admin/Views/Nhanvien/Edit.cshtml
+++ b/WebLapTop/WebLapTop/Areas/Admin/Views/Nhanvien/Edit.cshtml
@@ -20,7 +20,7 @@
         </div>
         <div class="card-content">
             <div class="card-body">
-                <form asp-action="Edit">
+                <form asp-action="Edit"enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="col-md-3">
                         <label>Họ và tên</label>
@@ -44,7 +44,8 @@
                         <label>Ảnh đại diện</label>
                     </div>
                     <div class="col-md-8 form-group">
-                        <input asp-for="AnhDaiDien" class="form-control" placeholder="Ảnh đại diện" />
+                        <input type="file" name="file" class="form-control" placeholder="Ảnh đại diện" />
+                        <input type="hidden" asp-for="AnhDaiDien" class="form-control" />
                     </div>
                     <div class="col-md-3">
                         <label>Tên đăng nhập</label>
@@ -57,12 +58,14 @@
                     </div>
                     <div class="col-md-8 form-group">
                         <input asp-for="MatKhau" class="form-control" placeholder="Mật khẩu" />
+                        <input type="hidden" asp-for="MatKhau" class="form-control" />
                     </div>
                     <div class="col-md-3">
                         <label>Xác nhận mật khẩu</label>
                     </div>
                     <div class="col-md-8 form-group">
                         <input asp-for="XacNhanMatKhau" class="form-control" placeholder="Xác nhận mật khẩu" />
+                        <input type="hidden" asp-for="XacNhanMatKhau" class="form-control" />
                     </div>
                     <div class="col-md-3">
                         <label>Quyền</label>
