--- a/WebLapTop/WebLapTop/Views/BanTin/Index.cshtml
+++ b/WebLapTop/WebLapTop/Views/BanTin/Index.cshtml
@@ -24,7 +24,7 @@
         <div class="col-md-3" style="float: left; width: 55%; text-align: justify">
             <p>@item.TomTat</p>
             <div class="col">
-                <p><a asp-action="Details" asp-route-id="@item.Id">Chi tiết</a></p>
+                <p><a asp-controller="Bantin" asp-action="Details" asp-route-id="@item.Id">Chi tiết</a></p>
             </div>
         </div>
     </div>
