--- a/WebLapTop/WebLapTop/Views/SanPham/Details.cshtml
+++ b/WebLapTop/WebLapTop/Views/SanPham/Details.cshtml
@@ -76,6 +76,7 @@
             <h5>Dòng: @Html.DisplayFor(model => model.IddongSanPhamNavigation.TenSanPham)</h5>
             <h5>Nơi sản xuất: @Html.DisplayFor(model => model.IdnoiSanXuatNavigation.TenNoiSanXuat)</h5>
             <h5>Bảo hành: @Html.DisplayFor(model => model.BaoHanh)</h5>
+            <h5>Lượt xem: @Html.DisplayFor(model => model.LuotXem)</h5>
             <h5 style="text-align: justify;">Mô tả:</h5> <p> @Html.Raw(Model.MoTa)</p>
 
             <div class="product-options">
@@ -392,6 +393,7 @@
             <h5>Dòng: @Html.DisplayFor(model => model.IddongSanPhamNavigation.TenSanPham)</h5>
             <h5>Nơi sản xuất: @Html.DisplayFor(model => model.IdnoiSanXuatNavigation.TenNoiSanXuat)</h5>
             <h5>Bảo hành: @Html.DisplayFor(model => model.BaoHanh)</h5>
+            <h5>Lượt xem: @Html.DisplayFor(model => model.LuotXem)</h5>
             <h5 style="text-align: justify;">Mô tả:</h5> <p> @Html.Raw(Model.MoTa)</p>
             <div class="product-options">
                 <label>
