--- a/WebLapTop/WebLapTop/Areas/Admin/Views/Sanpham/Details.cshtml
+++ b/WebLapTop/WebLapTop/Areas/Admin/Views/Sanpham/Details.cshtml
@@ -57,6 +57,12 @@
             @Html.Raw(Model.MoTa)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.LuotXem)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.Raw(Model.LuotXem)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.BaoHanh)
         </dt>
         <dd class="col-sm-10">
