--- a/WebLapTop/WebLapTop/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebLapTop/WebLapTop/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -97,6 +97,9 @@
                                                                                                                                                     <li>
                                                                                                                                                         <a asp-area="Admin" asp-controller="ChiTietHoaDon" asp-action="Index">Chi tiết hóa đơn</a>
                                                                                                                                                     </li>
+                                                                                                                                                    <li>
+                                                                                                                                                        <a asp-area="Admin" asp-controller="BaoCao" asp-action="Index">Báo cáo</a>
+                                                                                                                                                    </li>
                                                                                                                                                 </ul>
                                                                                                                                             </li>
                                                                                                                                                                 <li class="sidebar-item  has-sub">
