--- a/WebLapTop/WebLapTop/Areas/Admin/Views/Sanpham/Edit.cshtml
+++ b/WebLapTop/WebLapTop/Areas/Admin/Views/Sanpham/Edit.cshtml
@@ -47,7 +47,7 @@
                             </div>
                             <div class="col-md-8 form-group">
                                 <input type="hidden" asp-for="AnhSanPham" class="form-control" />
-                                <input type="file" name="file" />
+                                <input type="file" name="file" multiple />
                             </div>
                             <div class="col-md-3">
                                 <label>Giá bán</label>
