--- a/WebLapTop/WebLapTop/Areas/Admin/Views/Sanpham/Edit.cshtml
+++ b/WebLapTop/WebLapTop/Areas/Admin/Views/Sanpham/Edit.cshtml
@@ -91,7 +91,13 @@
                             <div class="col-md-8 form-group">
                                 <textarea asp-for="BaoHanh" class="form-control" placeholder="Bảo Hành"></textarea>
                             </div>
-                            
+                            <div class="col-md-3">
+                                <label>Lượt xem</label>
+                            </div>
+                            <div class="col-md-8 form-group">
+                                <textarea asp-for="LuotXem" class="form-control" placeholder="Lượt xem"></textarea>
+                            </div>
+
                             <div class="col-sm-11 d-flex justify-content-end">
                                 <input type="submit" value="Cập nhập" class="btn btn-primary" />
 
