--- a/WebLapTop/WebLapTop/Views/Home/Index.cshtml
+++ b/WebLapTop/WebLapTop/Views/Home/Index.cshtml
@@ -204,7 +204,7 @@
                         <div id="tab1" class="tab-pane active">
                             <div class="products-slick" data-nav="#slick-nav-1">
                                 <!-- product -->
-                                @foreach (var item in Model.Where(x=>x.LuotXem>0).OrderByDescending(x=>x.LuotXem).Take(4))
+                                @foreach (var item in Model.Where(x => x.LuotXem > 0).OrderByDescending(x => x.LuotXem).Take(4))
                                 {
                                     @if (item.GiaKhuyenMai > 0)
                                     {
@@ -241,6 +241,49 @@
                                                                 <span><i class="fa fa-heart-o"></i></span>
                                                             </a>
                                                         }                                                         <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
+                                                        <a class="quick-view" asp-controller="SanPham" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-eye"></i><span class="tooltipp"></span></a>
+                                                    </div>
+                                                </div>
+                                                <div class="add-to-cart">
+                                                    <a class="add-to-cart-btn" asp-controller="Home" asp-action="AddToCart" asp-route-id="@item.Id"><i class="fa fa-shopping-cart"></i> add to cart</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div class="col-md-4 col-xs-6">
+                                            <div class="product">
+                                                <a asp-controller="SanPham" asp-action="Details" asp-route-id="@item.Id">
+                                                    <img src="~/images/@Html.DisplayFor(modelItem => item.AnhSanPham)" style="max-width:100%" />
+                                                </a>
+                                                <div class="product-body" style="min-height: 275px;">
+                                                    <p class="product-category">Số lượng: @item.SoLuong</p>
+                                                    <h3 style="overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;">
+                                                        @item.TenSanPham
+                                                    </h3>                                        <h5 class="product-old-price">Giá: @String.Format("{0:N0}", item.GiaBan) VNĐ</h5>
+                                                    @*                            <h5 class="product-old-price" style="color:red">Giá KM: @String.Format("{0:N0}", item.GiaKhuyenMai) VNĐ</h5>
+                                                    *@                            <div class="product-rating">
+                                                        <i class="fa fa-star"></i>
+                                                        <i class="fa fa-star"></i>
+                                                        <i class="fa fa-star"></i>
+                                                        <i class="fa fa-star"></i>
+                                                        <i class="fa fa-star"></i>
+                                                    </div>
+                                                    <div class="product-btns">
+                                                        @{ var dalove = productlove.FirstOrDefault(loveyou => loveyou.Product1.Id == item.Id);}
+
+                                                        @if (dalove != null)
+                                                        {
+                                                            <a asp-controller="Home" asp-action="RemoveItemLove" asp-route-id="@item.Id" class="heart d-flex justify-content-center align-items-center " style="background-color:#ed71a3;">
+                                                                <span><i class="fa fa-heart-o"></i></span>
+                                                            </a> }
+                                                        else
+                                                        {
+                                                            <a asp-controller="Home" asp-action="AddToCart1" asp-route-id="@item.Id" class="heart d-flex justify-content-center align-items-center ">
+                                                                <span><i class="fa fa-heart-o"></i></span>
+                                                            </a>
+                                                        }                                                  <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
                                                         <a class="quick-view" asp-controller="SanPham" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-eye"></i><span class="tooltipp"></span></a>
                                                     </div>
                                                 </div>
