--- a/WebLapTop/WebLapTop/Areas/Admin/Views/Khachhang/Index.cshtml
+++ b/WebLapTop/WebLapTop/Areas/Admin/Views/Khachhang/Index.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Index";
 }
+
+<a style="float: right; margin-right: 70px;" class="btn btn-success btn-tone m-r-5" asp-area="Admin" asp-controller="Khachhang" asp-action="Export">Xuất Excel</a>
 <p>
     <a style="margin-left:20px;" class="btn btn-primary btn-tone m-r-5" asp-action="Create">Create New</a>
 </p>
