--- a/WebLapTop/WebLapTop/Areas/Admin/Views/ImagesSanPham/Index.cshtml
+++ b/WebLapTop/WebLapTop/Areas/Admin/Views/ImagesSanPham/Index.cshtml
@@ -25,7 +25,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Image)
+                <img src="~/Images/@Html.DisplayFor(modelItem=> item.Image)" width="70" height="70" class="img-thumbnail" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IdSanphamNavigation.TenSanPham)
