--- a/WebLapTop/WebLapTop/Views/Asus/Index.cshtml
+++ b/WebLapTop/WebLapTop/Views/Asus/Index.cshtml
@@ -124,39 +124,35 @@
                 <!-- /aside Widget -->
                 <!-- aside Widget -->
                 <div class="aside">
-                    <h3 class="aside-title">Top selling</h3>
-                    <div class="product-widget">
-                        <div class="product-img">
-                            <img src="~/as/img/product01.png" alt="">
-                        </div>
-                        <div class="product-body">
-                            <p class="product-category">Category</p>
-                            <h3 class="product-name"><a href="#">product name goes here</a></h3>
-                            <h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
-                        </div>
-                    </div>
+                    <h3 class="aside-title">Sản phẩm được quan tâm</h3>
+                    @foreach (var item in Model.Where(x => x.LuotXem > 0).OrderByDescending(x => x.LuotXem).Take(4))
+                    {
+                        @if (item.GiaKhuyenMai > 0)
+                        {
+                            <div class="product-widget">
+                                <div class="product-img">
+                                    <img src="~/images/@Html.DisplayFor(modelItem => item.AnhSanPham)" style="max-width:100%" />
+                                </div>
+                                <div class="product-body">
+                                    <h3 class="product-name"><a asp-controller="SanPham" asp-action="Details" asp-route-id="@item.Id">@item.TenSanPham</a></h3>
+                                    <h4 class="product-price">Giá: @String.Format("{0:N0}", item.GiaKhuyenMai) VN <del class="product-old-price"> @String.Format("{0:N0}", item.GiaBan) VN</del></h4>
+                                </div>
+                            </div>
 
-                    <div class="product-widget">
-                        <div class="product-img">
-                            <img src="~/as/img/product02.png" alt="">
-                        </div>
-                        <div class="product-body">
-                            <p class="product-category">Category</p>
-                            <h3 class="product-name"><a href="#">product name goes here</a></h3>
-                            <h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
-                        </div>
-                    </div>
-
-                    <div class="product-widget">
-                        <div class="product-img">
-                            <img src="~/as/img/product03.png" alt="">
-                        </div>
-                        <div class="product-body">
-                            <p class="product-category">Category</p>
-                            <h3 class="product-name"><a href="#">product name goes here</a></h3>
-                            <h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
-                        </div>
-                    </div>
+                        }
+                        else
+                        {
+                            <div class="product-widget">
+                                <div class="product-img">
+                                    <img src="~/images/@Html.DisplayFor(modelItem => item.AnhSanPham)" style="max-width:100%" />
+                                </div>
+                                <div class="product-body">
+                                    <h3 class="product-name"><a asp-controller="SanPham" asp-action="Details" asp-route-id="@item.Id">@item.TenSanPham</a></h3>
+                                    <h4 class="product-price">Giá: @String.Format("{0:N0}", item.GiaBan) VN</h4>
+                                </div>
+                            </div>
+                        }
+                    }
                 </div>
                 <!-- /aside Widget -->
             </div>
