--- a/WebLapTop/WebLapTop/Views/Home/Index.cshtml
+++ b/WebLapTop/WebLapTop/Views/Home/Index.cshtml
@@ -326,7 +326,7 @@
                 </div>
 
                 <div class="products-widget-slick" data-nav="#slick-nav-3">
-                    <div>
+               
                         <!-- product widget -->
                         @foreach (var item in Model.Where(x => x.LuotXem > 0).OrderByDescending(x => x.LuotXem).Take(4))
                         {
@@ -356,7 +356,7 @@
                             }
                         }
                         <!-- /product widget -->
-                    </div>
+                  
                 </div>
             </div>
 
@@ -369,7 +369,7 @@
                 </div>
 
                 <div class="products-widget-slick" data-nav="#slick-nav-4">
-                    <div>
+                   
                         <!-- product widget -->
                         @foreach (var item in Model)
                         {
@@ -387,7 +387,7 @@
                             }
                         }
                         <!-- /product widget -->
-                    </div>
+                   
                 </div>
             </div>
 
@@ -395,50 +395,50 @@
 
             <div class="col-md-4 col-xs-6">
                 <div class="section-title">
-                    <h4 class="title">Sản phẩm </h4>
+                    <h4 class="title">Sản phẩm</h4>
                     <div class="section-nav">
                         <div id="slick-nav-5" class="products-slick-nav"></div>
                     </div>
                 </div>
 
                 <div class="products-widget-slick" data-nav="#slick-nav-5">
-                    <div>
-                        <!-- product widget -->
-                        @foreach (var item in Model)
+                    @foreach (var item in Model)
+                    {
+                        @if (item.GiaKhuyenMai > 0)
                         {
-                            @if (item.GiaKhuyenMai > 0)
-                            {
-                                <div class="product-widget">
-                                    <div class="product-img">
-                                        <img src="~/images/@Html.DisplayFor(modelItem => item.AnhSanPham)" style="max-width:100%" />
-                                    </div>
-                                    <div class="product-body">
-                                        <h3 class="product-name"><a asp-controller="SanPham" asp-action="Details" asp-route-id="@item.Id">@item.TenSanPham</a></h3>
-                                        <h4 class="product-price">Giá: @String.Format("{0:N0}", item.GiaKhuyenMai) VN <del class="product-old-price"> @String.Format("{0:N0}", item.GiaBan) VN</del></h4>
-                                    </div>
+                            <!-- product widget -->
+                            <div class="product-widget">
+                                <div class="product-img">
+                                    <img src="~/images/@Html.DisplayFor(modelItem => item.AnhSanPham)" style="max-width:100%" />
                                 </div>
-                            }
-                            else
-                            {
-                                <div class="product-widget">
-                                    <div class="product-img">
-                                        <img src="~/images/@Html.DisplayFor(modelItem => item.AnhSanPham)" style="max-width:100%" />
-                                    </div>
-                                    <div class="product-body">
-                                        <h3 class="product-name"><a asp-controller="SanPham" asp-action="Details" asp-route-id="@item.Id">@item.TenSanPham</a></h3>
-                                        <h4 class="product-price">Giá: @String.Format("{0:N0}", item.GiaBan) VN</h4>
-                                    </div>
+                                <div class="product-body">
+                                    <h3 class="product-name"><a asp-controller="SanPham" asp-action="Details" asp-route-id="@item.Id">@item.TenSanPham</a></h3>
+                                    <h4 class="product-price">
+                                        Giá: @String.Format("{0:N0}", item.GiaKhuyenMai) VN <del class="product-old-price"> @String.Format("{0:N0}", item.GiaBan) VN</del>
+                                    </h4>
                                 </div>
-                            }
+                            </div>
+                            <!-- /product widget -->
                         }
-                        <!-- /product widget -->
-                    </div>
+                        else
+                        {
+                            <div class="product-widget">
+                                <div class="product-img">
+                                    <img src="~/images/@Html.DisplayFor(modelItem => item.AnhSanPham)" style="max-width:100%" />
+                                </div>
+                                <div class="product-body">
+                                    <h3 class="product-name"><a asp-controller="SanPham" asp-action="Details" asp-route-id="@item.Id">@item.TenSanPham</a></h3>
+                                    <h4 class="product-price">Giá: @String.Format("{0:N0}", item.GiaBan) VN</h4>
+                                </div>
+                            </div>
+                        }
+                    }
                 </div>
-            </div>
 
         </div>
         <!-- /row -->
     </div>
     <!-- /container -->
 </div>
+    </div>
 <!-- /SECTION -->
